ci(GitHub): Fix sonar-scanner pipeline

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -36,6 +36,7 @@ jobs:
           --quiet
           autoconf-archive
           gcovr
+          lcov
           libboost-test-dev
           libsdl2-dev
 
