--- a/.github/workflows/emscripten-build.yml
+++ b/.github/workflows/emscripten-build.yml
@@ -96,10 +96,11 @@ jobs:
 
       - name: Publish web app to GitHub Pages
         run: |-
+          echo "* -text" > .gitattributes
           if [[ $(git diff --stat) != '' ]]; then
             git config --global user.name 'Continuous Deployment Job'
             git config --global user.email 'oboukli@users.noreply.github.com'
-            git add --all
+            git add --all -- ":!.gitattributes"
             git commit --amend --all --date=now --message='Automated deployment'
             git push --force
           else
