--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -62,6 +62,8 @@ jobs:
 
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1
+        with:
+          msbuild-architecture: x64
 
       - name: Build
         working-directory: ${{ github.workspace }}
