--- a/.editorconfig
+++ b/.editorconfig
@@ -22,13 +22,21 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{htmlhintrc,js,json,yml}]
+[*.{htmlhintrc,js,json}]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
 max_line_length = 80
+trim_trailing_whitespace = true
+
+[*.yml]
+charset = utf-8
+end_of_line = lf
+indent_size = 2
+indent_style = space
+insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.{properties}]
