--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -115,6 +115,12 @@ jobs:
       - name: Run tromino 4 2 3
         run: ./src/tromino 4 2 3
 
+      - name: Run tromino2d
+        run: ./src/tromino2d 2> /dev/null || true
+
+      - name: Run tromino2d 5 0 0
+        run: ./src/tromino2d 5 0 0 2> /dev/null || true
+
       - name: Run gcovr
         run: >-
           gcovr
