--- a/.editorconfig
+++ b/.editorconfig
@@ -22,7 +22,7 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,json,yml}]
+[*.{htmlhintrc,js,json,yml}]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
