--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,4 @@ sonar.sourceEncoding=UTF-8
 sonar.scm.enabled=true
 sonar.scm.provider=git
 sonar.cfamily.build-wrapper-output=build_wrapper_output_directory
-sonar.cfamily.cache.enabled=true
-sonar.cfamily.cache.path=sonarscanner_cache
-sonar.cfamily.threads=3
+sonar.cfamily.reportingCppStandardOverride=c++17
