--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -113,14 +113,23 @@ jobs:
       - name: Run tromino 5 0 0
         run: ./src/tromino 5 0 0 2> /dev/null || true
 
-      - name: Run tromino 4 2 3
-        run: ./src/tromino 4 2 3
+      - name: Run tromino 2 0 1
+        run: ./src/tromino 2 0 1
+
+      - name: Run tromino 8 3 5
+        run: ./src/tromino 8 3 5
 
       - name: Run tromino2d
         run: ./src/tromino2d 2> /dev/null || true
 
       - name: Run tromino2d 5 0 0
         run: ./src/tromino2d 5 0 0 2> /dev/null || true
+
+      - name: Run tromino2d 8192 0 0
+        run: ./src/tromino2d 8192 0 0 2> /dev/null || true
+
+      - name: Run tromino2d 1024 0 0 -f
+        run: ./src/tromino2d 1024 0 0 -f 2> /dev/null || true
 
       - name: Start Xvfb
         run: Xvfb :99 -screen 0 1024x768x24 &
