--- a/msbuild/TrominoPuzzle.Cli/TrominoPuzzle.Cli.vcxproj.filters
+++ b/msbuild/TrominoPuzzle.Cli/TrominoPuzzle.Cli.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\..\src\cli\trmn_graph_vt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\cli\wrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\cli\cli_models.hpp">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\cli\trmn_graph_vt.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\cli\wrapper.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
