--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -79,3 +79,14 @@ jobs:
           -validate
           -warnAsError
           "${{ env.SOLUTION_FILE_PATH }}"
+
+      - name: Compute SHA256 of artifacts
+        run: |-
+          ls
+          Get-FileHash LibTromino.Test.exe -Algorithm SHA256
+          Get-FileHash tromino.exe -Algorithm SHA256
+          Get-FileHash tromino2d.exe -Algorithm SHA256
+          Get-FileHash libtromino_validation.lib -Algorithm SHA256
+          Get-FileHash libtromino.lib -Algorithm SHA256
+          Get-FileHash libtromino2d.lib -Algorithm SHA256
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
