--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      SONAR_SCANNER_VERSION: 4.7.0.2747
+      SONAR_SCANNER_VERSION: 4.8.0.2856
       SONAR_SERVER_URL: https://sonarcloud.io
       BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory
       COVERAGE_REPORTS_PATH: ${{ github.workspace }}/coverage.xml
@@ -46,12 +46,6 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: microsoft
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -114,8 +108,8 @@ jobs:
       - name: Run tromino 5 0 0
         run: ./src/tromino 5 0 0 2> /dev/null || true
 
-      - name: Run tromino 2 0 1
-        run: ./src/tromino 2 0 1
+      - name: Run tromino 2 0 7
+        run: ./src/tromino 2 0 7 2> /dev/null || true
 
       - name: Run tromino 2 0 1
         run: ./src/tromino 2 0 1
