build: Clean up Autotools configuration

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,11 +4,18 @@
 
 # SPDX-License-Identifier: MIT
 
+AM_CPPFLAGS =
+AM_CFLAGS =
+AM_CXXFLAGS =
+AM_LDFLAGS = \
+	-no-undefined \
+	-version-info $(LIBTROMINO_CURRENT):$(LIBTROMINO_REVISION):$(LIBTROMINO_AGE)
+
 if CODE_COVERAGE_ENABLED
-AM_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS)
-AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
-AM_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)
-AM_LDFLAGS = $(CODE_COVERAGE_LIBS)
+AM_CPPFLAGS += $(CODE_COVERAGE_CPPFLAGS)
+AM_CFLAGS += $(CODE_COVERAGE_CFLAGS)
+AM_CXXFLAGS += $(CODE_COVERAGE_CXXFLAGS)
+AM_LDFLAGS += $(CODE_COVERAGE_LIBS)
 endif
 
 bin_PROGRAMS =
@@ -16,16 +23,10 @@ include_HEADERS =
 lib_LTLIBRARIES =
 
 libtromino_la_SOURCES = libtromino/tromino.c
-libtromino_la_LDFLAGS = \
-	-no-undefined \
-	-version-info $(LIBTROMINO_CURRENT):$(LIBTROMINO_REVISION):$(LIBTROMINO_AGE)
 include_HEADERS += libtromino/tromino.h
 lib_LTLIBRARIES += libtromino.la
 
 libtromino_validation_la_SOURCES = validation/tromino_validation.c
-libtromino_validation_la_LDFLAGS = \
-	-no-undefined \
-	-version-info $(LIBTROMINO_CURRENT):$(LIBTROMINO_REVISION):$(LIBTROMINO_AGE)
 include_HEADERS += validation/tromino_validation.h
 lib_LTLIBRARIES += libtromino-validation.la
 
@@ -51,26 +52,19 @@ tromino_LDADD = \
 bin_PROGRAMS += tromino
 
 libtromino_gfx2d_la_SOURCES = \
-	gfx2d/board.hpp \
-	gfx2d/step.hpp \
-	gfx2d/style.hpp \
 	gfx2d/tromino_gfx2d.cpp \
-	gfx2d/tromino_gfx2d.hpp \
 	gfx2d/view_model.cpp \
-	gfx2d/view_model.hpp \
-	gfx2d/window.cpp \
-	gfx2d/window.hpp
+	gfx2d/window.cpp
 libtromino_gfx2d_la_CPPFLAGS = \
 	-I/usr/include/SDL2 \
 	-I$(top_srcdir)/src/libtromino
 libtromino_gfx2d_la_LDFLAGS = \
-	-lSDL2 \
-	-no-undefined \
-	-version-info $(LIBTROMINO_CURRENT):$(LIBTROMINO_REVISION):$(LIBTROMINO_AGE)
-libtromino_gfx2d_la_LIBADD = libtromino.la
+	$(AM_LDFLAGS) \
+	-lSDL2
 include_HEADERS += \
 	gfx2d/board.hpp \
 	gfx2d/step.hpp \
+	gfx2d/style.hpp \
 	gfx2d/tromino_gfx2d.hpp \
 	gfx2d/view_model.hpp \
 	gfx2d/window.hpp
@@ -92,9 +86,9 @@ tromino2d_CPPFLAGS = \
 	-I$(top_srcdir)/src/gfx2d \
 	-I$(top_srcdir)/src/validation
 tromino2d_LDFLAGS = \
+	$(AM_LDFLAGS) \
 	-lpthread \
-	-lSDL2 \
-	-no-undefined
+	-lSDL2
 tromino2d_LDADD = \
 	libtromino.la \
 	libtromino-gfx2d.la \
