refactor: Restructure files

--- a/emscripten/Makefile
+++ b/emscripten/Makefile
@@ -13,6 +13,7 @@ CXXFLAGS ::= -std=c++17 -g0 -O3 -flto -fno-rtti -fno-exceptions -Wall -Werror
 LDFLAGS ::=
 
 SRC_DIR ::= ../src
+INC_DIR ::= ../include
 OBJ_DIR ::= ../obj/web
 OUT_DIR ::= ../dist/web/scripts
 WEB_DIR ::= ../dist/web
@@ -51,7 +52,7 @@ trmn: $(TARGET_TRMN)
 litro: $(TARGET_LITRO)
 	@echo "Target \"litro\" successfully built."
 
-$(TARGET_LITRO): $(OBJ_DIR)/libtromino/tromino.o $(OBJ_DIR)/wasm/litro/litro.o
+$(TARGET_LITRO): $(OBJ_DIR)/tromino_core/tromino.o $(OBJ_DIR)/wasm/litro/litro.o
 	$(MKDIR) $(OUT_DIR)/$(LITRO_DIR_NAME)
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) \
 		--closure 1 \
@@ -82,9 +83,11 @@ $(TARGET_LITRO): $(OBJ_DIR)/libtromino/tromino.o $(OBJ_DIR)/wasm/litro/litro.o
 		-s WASM \
 		-o $(OUT_DIR)/$(LITRO_DIR_NAME)/$@ $^
 
-$(TARGET_TRMN): $(OBJ_DIR)/libtromino/tromino.o $(GFX2D_OBJS) $(OBJ_DIR)/wasm/trmn/trmn.o
+$(TARGET_TRMN): $(OBJ_DIR)/tromino_core/tromino.o $(GFX2D_OBJS) $(OBJ_DIR)/wasm/trmn/trmn.o
 	$(MKDIR) $(OUT_DIR)/$(TRMN_DIR_NAME)
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) \
+		-I $(INC_DIR)/tromino_core \
+		-I $(INC_DIR)/gfx2d \
 		--closure 1 \
 		--no-entry \
 		-l GL \
@@ -113,16 +116,17 @@ $(TARGET_TRMN): $(OBJ_DIR)/libtromino/tromino.o $(GFX2D_OBJS) $(OBJ_DIR)/wasm/tr
 		-s WASM \
 		-o $(OUT_DIR)/$(TRMN_DIR_NAME)/$@ $^
 
-$(OBJ_DIR)/libtromino/tromino.o: $(SRC_DIR)/libtromino/tromino.c
+$(OBJ_DIR)/tromino_core/tromino.o: $(SRC_DIR)/tromino_core/tromino.c
 	@mkdir -p $(dir $@)
 	$(CC) $(CPPFLAGS) $(CFLAGS) \
+		-I $(INC_DIR)/tromino_core \
 		-c $< \
 		-o $@
 
 $(OBJ_DIR)/wasm/litro/litro.o: $(SRC_DIR)/wasm/litro/litro.c
 	@mkdir -p $(dir $@)
 	$(CC) $(CPPFLAGS) $(CFLAGS) \
-		-I $(SRC_DIR)/libtromino \
+		-I $(INC_DIR)/tromino_core \
 		-c $< \
 		-o $@
 
@@ -130,8 +134,8 @@ $(OBJ_DIR)/wasm/trmn/trmn.o: $(SRC_DIR)/wasm/trmn/trmn.cpp
 	@mkdir -p $(dir $@)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) \
 		-s USE_SDL=2 \
-		-I $(SRC_DIR)/libtromino \
-		-I $(SRC_DIR)/gfx2d \
+		-I $(INC_DIR)/tromino_core \
+		-I $(INC_DIR)/gfx2d \
 		-c $< \
 		-o $@
 
@@ -139,7 +143,8 @@ $(OBJ_DIR)/gfx2d/%.o: $(SRC_DIR)/gfx2d/%.cpp
 	@mkdir -p $(dir $@)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) \
 		-s USE_SDL=2 \
-		-I $(SRC_DIR)/libtromino \
+		-I $(INC_DIR)/tromino_core \
+		-I $(INC_DIR)/gfx2d \
 		-c $< \
 		-o $@
 
@@ -152,7 +157,7 @@ webapp:
 clean:
 	$(RM) \
 		$(OBJ_DIR)/gfx2d/*.o \
-		$(OBJ_DIR)/libtromino/*.o \
+		$(OBJ_DIR)/tromino_core/*.o \
 		$(OBJ_DIR)/wasm/trmn/*.o \
 		$(OBJ_DIR)/wasm/litro/*.o \
 		$(OUT_DIR)/$(LITRO_DIR_NAME)/gfx.js \
