--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,12 +22,16 @@ bin_PROGRAMS =
 include_HEADERS =
 lib_LTLIBRARIES =
 
-libtromino_la_SOURCES = libtromino/tromino.c
-include_HEADERS += libtromino/tromino.h
+libtromino_la_SOURCES = tromino_core/tromino.c
+libtromino_la_CPPFLAGS = \
+	-I$(top_srcdir)/include/tromino_core
+include_HEADERS += $(top_srcdir)/include/tromino_core/tromino.h
 lib_LTLIBRARIES += libtromino.la
 
-libtromino_validation_la_SOURCES = validation/tromino_validation.c
-include_HEADERS += validation/tromino_validation.h
+libtromino_validation_la_SOURCES = tromino_validation/tromino_validation.c
+libtromino_validation_la_CPPFLAGS = \
+	-I$(top_srcdir)/include/tromino_validation
+include_HEADERS += $(top_srcdir)/include/tromino_validation/tromino_validation.h
 lib_LTLIBRARIES += libtromino-validation.la
 
 tromino_SOURCES = \
@@ -44,8 +48,8 @@ tromino_SOURCES = \
 	cli/wrapper.cpp \
 	cli/wrapper.hpp
 tromino_CPPFLAGS = \
-	-I$(top_srcdir)/src/libtromino \
-	-I$(top_srcdir)/src/validation
+	-I$(top_srcdir)/include/tromino_core \
+	-I$(top_srcdir)/include/tromino_validation
 tromino_LDADD = \
 	libtromino.la \
 	libtromino-validation.la
@@ -57,17 +61,18 @@ libtromino_gfx2d_la_SOURCES = \
 	gfx2d/window.cpp
 libtromino_gfx2d_la_CPPFLAGS = \
 	-I/usr/include/SDL2 \
-	-I$(top_srcdir)/src/libtromino
+	-I$(top_srcdir)/include/tromino_core \
+	-I$(top_srcdir)/include/gfx2d
 libtromino_gfx2d_la_LDFLAGS = \
 	$(AM_LDFLAGS) \
 	-lSDL2
 include_HEADERS += \
-	gfx2d/board.hpp \
-	gfx2d/step.hpp \
-	gfx2d/style.hpp \
-	gfx2d/tromino_gfx2d.hpp \
-	gfx2d/view_model.hpp \
-	gfx2d/window.hpp
+	$(top_srcdir)/include/gfx2d/board.hpp \
+	$(top_srcdir)/include/gfx2d/step.hpp \
+	$(top_srcdir)/include/gfx2d/style.hpp \
+	$(top_srcdir)/include/gfx2d/tromino_gfx2d.hpp \
+	$(top_srcdir)/include/gfx2d/view_model.hpp \
+	$(top_srcdir)/include/gfx2d/window.hpp
 lib_LTLIBRARIES += libtromino-gfx2d.la
 
 tromino2d_SOURCES = \
@@ -82,9 +87,9 @@ tromino2d_SOURCES = \
 	gui/params.hpp
 tromino2d_CPPFLAGS = \
 	-I/usr/include/SDL2 \
-	-I$(top_srcdir)/src/libtromino \
-	-I$(top_srcdir)/src/gfx2d \
-	-I$(top_srcdir)/src/validation
+	-I$(top_srcdir)/include/tromino_core \
+	-I$(top_srcdir)/include/gfx2d \
+	-I$(top_srcdir)/include/tromino_validation
 tromino2d_LDFLAGS = \
 	$(AM_LDFLAGS) \
 	-lpthread \
