build(Autotools): Add linker options

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,8 +8,10 @@ AM_CPPFLAGS =
 AM_CFLAGS =
 AM_CXXFLAGS =
 AM_LDFLAGS = \
+	-Wl,--fatal-warnings \
 	-no-undefined \
-	-version-info $(LIBTROMINO_CURRENT):$(LIBTROMINO_REVISION):$(LIBTROMINO_AGE)
+	-version-info $(LIBTROMINO_CURRENT):$(LIBTROMINO_REVISION):$(LIBTROMINO_AGE) \
+	-Wl,--warn-common
 
 if CODE_COVERAGE_ENABLED
 AM_CPPFLAGS += $(CODE_COVERAGE_CPPFLAGS)
